# docs/swagger.json
@@ -267,6 +267,11 @@
         },
         "/consultations/delete/{id}": {
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Delete consultation by ID",
                 "consumes": [
                     "application/json"
@@ -316,7 +321,7 @@
                 }
             }
         },
-        "/consultations/request/{id}": {
+        "/consultations/request": {
             "get": {
                 "security": [
                     {
@@ -324,9 +329,6 @@
                     }
                 ],
                 "description": "Show consultation by ID of request",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -335,20 +337,11 @@
                 ],
                 "summary": "Get Consultation by request ID",
                 "operationId": "get-consultation-by-id-of-request",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID заявки",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.Info"
+                            "$ref": "#/definitions/controller.ResponseInfo"
                         }
                     },
                     "400": {
@@ -928,7 +921,7 @@
                 }
             }
         },
-        "controller.Info": {
+        "controller.ResponseInfo": {
             "type": "object",
             "properties": {
                 "name": {
